Fix dark mode for Finca & Astra

--- a/src/css/games/astra.less
+++ b/src/css/games/astra.less
@@ -22,6 +22,14 @@
 		background: #faf7ef;
 	}
 
+	.tbp-card-text {
+		color: #000;
+	}
+
+	.tbp-reminder {
+		background-color: var(--dark-40);
+	}
+
 	.tooltiptext .tbp-icon-vp {
 		filter: invert(0.9);
 	}
