--- a/src/css/games/finca.less
+++ b/src/css/games/finca.less
@@ -24,11 +24,9 @@
 		background-color: var(--dark-40);
 	}
 
-	.fi_players .fi_playerInfo {
-		background-color: var(--dark-back);
-	}
-
-	.fi_food_storage {
+	.fi_players .fi_playerInfo,
+	.fi_food_storage,
+	#player_boards .fi_donkey .count_donkey {
 		background-color: var(--dark-back);
 	}
 
@@ -43,5 +41,14 @@
 	.fi_food,
 	.fi_playerInfo .fi_request_playerInfo .fi_requestIcon {
 		filter: var(--highlight-min);
+	}
+
+	.fi_donkey {
+		filter: drop-shadow(2px 1px 1px black) brightness(0.9) saturate(0.9);
+	}
+
+	.fi_mills_circle .fi_mill,
+	.fi_game_container .fi_main_board .fi_board_img {
+		filter: brightness(0.9) saturate(0.9);
 	}
 }
